fix safari menu spacing issue

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -17,7 +17,7 @@
     top: 0;
     left: 0;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     // Override default menu's vertical transformation:
     transform: none;
     .dropdown-toggle {
